# Geometry-Library

./: bash.exe.stackdump  main.py  pyproject.toml  readme.md
geom/: __init__.py  geom.py  linestring.py  point.py  segment.py
