[tool.poetry]
name = "geometry_library"
version = "0.1.0"
description = "geometry library"
authors = ["Sadat Issah <51789921+sadatyussuf@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
